# OpenHack

./: .gitignore  .gitmodules  ABOUT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  about.md  mod.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/actions/: ci-build.yml
.github/geode/: action.yml
.github/workflows/: build.yml  ci-geode.yml  ci-standalone.yml
api/: openhack.hpp
cmake/: version.h.in
hacks/: bypass.json  cosmetic.json  creator.json  level.json  universal.json
libs/: CMakeLists.txt
libs/curl/: CMakeLists.txt
libs/curl/lib/x64/: libcurl.lib
libs/glew/lib/Release/x64/: glew32.lib
resources/hacks/: bypass.json  cosmetic.json  creator.json  level.json  universal.json
src/: config.cpp  config.h  globals.cpp  globals.h  hook.cpp  hook.h  logger.cpp  logger.h  main.cpp  pch.h  project.h.in  updater.cpp  updater.h  utils.cpp  utils.h  winmm.h
src/bindings/: GJGameLevel.h  GameManager.h  GameObject.h  GameStatsManager.h  LevelEditorLayer.h  MenuLayer.h  OptionsLayer.h  PlayLayer.h  bindings.h
src/geode/: main.cpp  pch.hpp  utils.cpp  utils.hpp
src/geode/hooks/: AppDelegate.cpp  CCDirector.cpp  CCDrawNode.cpp  CCEGLView.cpp  CCScheduler.cpp  CCTouchDispatcher.cpp  ChannelControl.cpp  EditorUI.cpp  GJBaseGameLayer.cpp  GameStatsManager.cpp  HardStreak.cpp  LevelEditorLayer.cpp  MainGameLayer.cpp  MenuLayer.cpp  PauseLayer.cpp  PlayLayer.cpp  PlayerObject.cpp
src/hacks/: auto_safemode.cpp  auto_safemode.h  discord_rpc.cpp  discord_rpc.h  display.cpp  display.h  hacks.cpp  hacks.h  patterns.cpp  patterns.h  pickup_coins.cpp  pickup_coins.h  shortcuts.cpp  shortcuts.h  speedhack.cpp  speedhack.h  startpos_switch.cpp  startpos_switch.h
src/hooks/: AppDelegate.cpp  CCEGLView.cpp  GameStatsManager.cpp  GameStatsManager.h  LevelEditorLayer.cpp  LevelEditorLayer.h  MenuLayer.cpp  MenuLayer.h  PlayLayer.cpp  PlayLayer.h  hooks.h
src/injector/: injector.h  xinput.def  xinput.h  xinput_injector.cpp
src/menu/: animation.cpp  animation.h  custom_action.cpp  custom_action.h  gui.cpp  gui.h  keybinds.cpp  keybinds.h  menu.cpp  menu.h
src/shared/: api.cpp  config.cpp  config.hpp  openhack.cpp  openhack.hpp  utils.hpp
src/shared/gui/: color.cpp  color.hpp  gui.cpp  gui.hpp  modal.cpp  modal.hpp  window.cpp  window.hpp
src/shared/gui/animation/: easing.cpp  easing.hpp  move_action.cpp  move_action.hpp
src/shared/gui/imgui/: hooks.cpp  imgui.hpp
src/shared/gui/themes/: themes.cpp  themes.hpp
src/shared/gui/themes/classic/: classic.cpp  classic.hpp
src/shared/gui/themes/gruvbox/: gruvbox.cpp  gruvbox.hpp
src/shared/gui/themes/megahack/: megahack.cpp  megahack.hpp
src/shared/gui/themes/modern/: modern.cpp  modern.hpp
src/shared/hacks/: hack-list.hpp  hacks.cpp  hacks.hpp
src/shared/hacks/accurate-percentage/: accurate-percentage.cpp  accurate-percentage.hpp
src/shared/hacks/auto-deafen/: auto-deafen.cpp  auto-deafen.hpp
src/shared/hacks/auto-kill/: auto-kill.cpp  auto-kill.hpp
src/shared/hacks/auto-pickup-coins/: auto-pickup-coins.cpp  auto-pickup-coins.hpp
src/shared/hacks/auto-safemode/: auto-safemode.cpp  auto-safemode.hpp
src/shared/hacks/auto-save/: auto-save.cpp  auto-save.hpp
src/shared/hacks/click-tp/: click-tp.cpp  click-tp.hpp
src/shared/hacks/custom-wave-trail/: custom-wave-trail.cpp  custom-wave-trail.hpp
src/shared/hacks/discord-rpc/: discord-rpc.cpp  discord-rpc.hpp
src/shared/hacks/display/: display.cpp  display.hpp
src/shared/hacks/frame-stepper/: frame-stepper.cpp  frame-stepper.hpp
src/shared/hacks/hide-pause/: hide-pause.cpp  hide-pause.hpp
src/shared/hacks/hide-triggers/: hide-triggers.cpp  hide-triggers.hpp
src/shared/hacks/hitboxes/: hitboxes.cpp  hitboxes.hpp
src/shared/hacks/instant-complete/: instant-complete.cpp  instant-complete.hpp
src/shared/hacks/labels/: label.cpp  label.hpp  labels.cpp  labels.hpp
src/shared/hacks/menu-gameplay/: menu-gameplay.cpp  menu-gameplay.hpp
src/shared/hacks/noclip/: noclip.cpp  noclip.hpp
src/shared/hacks/noclip-limit/: noclip-limit.cpp  noclip-limit.hpp
src/shared/hacks/random-seed/: random-seed.cpp  random-seed.hpp
src/shared/hacks/respawn-delay/: respawn-delay.cpp  respawn-delay.hpp
src/shared/hacks/rgb-icons/: rgb-icons.cpp  rgb-icons.hpp
src/shared/hacks/shortcuts/: shortcuts.cpp  shortcuts.hpp
src/shared/hacks/smart-startpos/: smart-startpos.cpp  smart-startpos.hpp
src/shared/hacks/speedhack/: speedhack.cpp  speedhack.hpp
src/shared/hacks/startpos-switcher/: startpos-switcher.cpp  startpos-switcher.hpp
src/shared/hacks/zephyrus/: replays.cpp  replays.hpp
src/shared/menu/: blur.cpp  blur.hpp  keybinds.cpp  keybinds.hpp  menu.cpp  menu.hpp
src/shared/platform/: platform.hpp
src/shared/platform/android/: android.hpp
src/shared/platform/win32/: 4gb_patch.hpp  dll_inject.hpp  sigscan.hpp  win32.cpp  win32.hpp
src/standalone/: main.cpp  pch.hpp  utils.cpp  utils.hpp
src/standalone/debug/: crashhandler.hpp  ehdata_structs.hpp  logger.cpp  logger.hpp
src/standalone/hooks/: AppDelegate.cpp  CCDrawNode.cpp  CCEGLView.cpp  CCScheduler.cpp  ChannelControl.cpp  EditorUI.cpp  GJBaseGameLayer.cpp  GameStatsManager.cpp  HardStreak.cpp  LevelEditorLayer.cpp  MenuGameLayer.cpp  PauseLayer.cpp  PlayLayer.cpp  PlayerObject.cpp  hooks.hpp
src/standalone/imgui/: imgui_hook.cpp  imgui_hook.hpp
src/standalone/updater/: updater.cpp  updater.hpp
src/standalone/xinput/: injector.hpp  xinput.def  xinput.hpp  xinput_injector.cpp
